--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
 			</header>
 			<main class="container" id="main">
 				<div>
-					<p>
-						We have selected a random number between 1 and 100. See if you can
-						guess it in 10 turns or fewer. We'll tell you if your guess was too
-						high or too low.
-					</p>
+					<p>Tests</p>
 				</div>
 				<div>
 					<p id="answer"></p>
