Add Recipes, Guessing Number and 1st websit

--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
-		<link rel="stylesheet" href="styles.css" />
+		<title>Gonzzy Main Page</title>
 	</head>
 	<body>
-		<h1>Odin Recipes</h1>
+		<h1>These are my apps and websites</h1>
 		<ul>
-			<li><a href="./recipes/friedChicken.html">Fried Chicken Recipe</a></li>
-			<li><a href="./recipes/steak.html">Steak</a></li>
-			<li><a href="./recipes/lasagna.html">Lasagna</a></li>
-			<li><a href="./recipes/fries.html">Fries</a></li>
+			<li><a href="./RecipeSite/recipes.html">Recipes Sites</a></li>
+			<li>
+				<a href="./1stHTMLWebsite/firsthtmlwebsite.html">1st HTML website</a>
+			</li>
+			<li>
+				<a href="./guessingNumber/guessingNumber.html">Guessing Number Sites</a>
+			</li>
 		</ul>
 	</body>
 </html>
