Correct back to main page bug

--- a/RecipeSite/recipes/fries.html
+++ b/RecipeSite/recipes/fries.html
@@ -24,6 +24,6 @@
         <li>Turn the heat up until the oil reaches 180C, or a cube of bread browns in 30 seconds. Fry the French fries again for 2-3 mins per batch until lightly golden and really crisp. Drain on kitchen paper and immediately season with sea salt.</li>
         
     </ol>
-    <a href="../index.html">Go back to main page</a>
+    <a href="../recipes/fries.html">Go back to main page</a>
 </body>
 </html>
