--- a/RecipeSite/recipes/lasagna.html
+++ b/RecipeSite/recipes/lasagna.html
@@ -44,6 +44,6 @@
         <li>Place dish on a rimmed baking sheet and bake, uncovered, until bubbly and deep golden brown, 60-65 minutes. Let stand 15 minutes before serving. Serve with remaining meat sauce.</li>
         
     </ol>
-    <a href="../index.html">Go back to main page</a>
+    <a href="../recipes/index.html">Go back to main page</a>
 </body>
 </html>
