--- a/RecipeSite/recipes/steak.html
+++ b/RecipeSite/recipes/steak.html
@@ -30,6 +30,6 @@
             Add the steaks and marinade for 20 minutes, or up to 8 hours.
         </li>
     </ol>
-    <a href="../index.html">Go back to main page</a>
+    <a href="../recipes/index.html">Go back to main page</a>
 </body>
 </html>
