Add basic style to main page

--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./styles.css" />
 		<title>Gonzzy Main Page</title>
 	</head>
 	<body>
+		<div class="logo">
+			<img src="./images/OGLogo.jpg" alt="Logo" />
+		</div>
 		<h1>These are my apps and websites</h1>
 		<ul>
 			<li><a href="./RecipeSite/recipes.html">Recipes Sites</a></li>
@@ -17,5 +21,7 @@
 				<a href="./guessingNumber/guessingNumber.html">Guessing Number Sites</a>
 			</li>
 		</ul>
+
+		<h6>Made by: Olivier Gonçalves</h6>
 	</body>
 </html>
