Add minimalist website, submit form, simple clock, bigger than program

--- a/index.html
+++ b/index.html
@@ -8,21 +8,34 @@
 		<title>Gonzzy Main Page</title>
 	</head>
 	<body>
-		<div class="logo">
-			<img src="./images/OGLogo.jpg" alt="Logo" />
+		<div class="logo center">
+			<img src="./images/OGLogo.jpg" alt="Logo" class="center" />
 		</div>
-		<h1>These are my apps and websites</h1>
-		<ul>
-			<li><a href="./RecipeSite/recipes.html">Recipes Sites</a></li>
-			<li>
+		<h1 class="mainTitle">These are my apps and websites</h1>
+		<ul class="center">
+			<li class="center">
+				<a href="./RecipeSite/recipes.html">Recipes Sites</a>
+			</li>
+			<li class="center">
 				<a href="./1stHTMLWebsite/firsthtmlwebsite.html">1st HTML website</a>
 			</li>
-			<li>
+			<li class="center">
 				<a href="./guessingNumber/guessingNumber.html">Guessing Number Sites</a>
+			</li>
+			<li>
+				<a href="./Minimalist Website/minimalist.html">Minimalist Website</a>
+			</li>
+			<li>
+				<a href="./SubmitForm/">Submit Form</a>
+			</li>
+			<li>
+				<a href="./Clock/clock.html">Simple Clock</a>
+			</li>
+			<li>
+				<a href="./Bigger/bigger.html">Bigger Than Program</a>
 			</li>
 		</ul>
 
 		<h6>Made by: Olivier Gonçalves</h6>
-		
 	</body>
 </html>
