--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<title>Gonzzy Main Page</title>
 	</head>
 	<body>
-		<div class="logo center">
+		<div class="logo">
 			<img src="./images/OGLogo.jpg" alt="Logo" class="center" />
 		</div>
 		<h1 class="mainTitle">These are my apps and websites</h1>
