--- a/RecipeSite/recipes/friedChicken.html
+++ b/RecipeSite/recipes/friedChicken.html
@@ -10,29 +10,29 @@
 	<body>
 		<h1>Fried Chicken Recipe</h1>
 		<img src="../images/friedchicken.jpg" alt="Fried Chicken Image" />
-		<h2>Description</h2>
+		<h2 class="recipeHeaders">Description</h2>
 		<p>
 			perfect Fried Chicken with the crispiest, most flavorful crunchy outside
 			with moist and juicy meat on the inside.
 		</p>
-		<h2>Ingredients</h2>
-		<ul>
-			<li>6 chicken thighs</li>
-			<li>chicken drumsticks</li>
-			<li>3 cups buttermilk</li>
-			<li>cup Buffalo Hot sauce optional</li>
-			<li>salt</li>
-			<li>pepper</li>
-			<li>all-purpose flour</li>
-			<li>cornstarch</li>
-			<li>paprika</li>
-			<li>onion powder</li>
-			<li>oregano</li>
-			<li>basil</li>
-			<li>cayenne pepper</li>
-			<li>vegetable frying oil</li>
+		<h2 class="recipeHeaders">Ingredients</h2>
+		<ul class="ingredientList">
+			<li class="ingredientList">6 chicken thighs</li>
+			<li class="ingredientList">chicken drumsticks</li>
+			<li class="ingredientList">3 cups buttermilk</li>
+			<li class="ingredientList">cup Buffalo Hot sauce optional</li>
+			<li class="ingredientList">salt</li>
+			<li class="ingredientList">pepper</li>
+			<li class="ingredientList">all-purpose flour</li>
+			<li class="ingredientList">cornstarch</li>
+			<li class="ingredientList">paprika</li>
+			<li class="ingredientList">onion powder</li>
+			<li class="ingredientList">oregano</li>
+			<li class="ingredientList">basil</li>
+			<li class="ingredientList">cayenne pepper</li>
+			<li class="ingredientList">vegetable frying oil</li>
 		</ul>
-		<h2>Steps</h2>
+		<h2 class="recipeHeaders">Steps</h2>
 		<ol>
 			<li>
 				n a large mixing bowl, whisk together buttermilk, hot sauce (optional,
