--- a/Sites/Bigger/bigger.html
+++ b/Sites/Bigger/bigger.html
@@ -13,7 +13,7 @@
 			<h1>Bigger than Program</h1>
 		</header>
 		<main>
-			<a href="../index.html">Go back to main page</a>
+			<a href="../../index.html">Go back to main page</a>
 			<div class="container">
 				<h2>
 					program where user inputs 2 int values in 2 input boxes and you
