--- a/Sites/Minimalist Website/minimalist.html
+++ b/Sites/Minimalist Website/minimalist.html
@@ -28,7 +28,7 @@
               alt=""
             />
           </div>
-          <a href="../index.html">Go back to main page</a>
+          <a href="../../index.html">Go back to main page</a>
           <div class="nav-links">
             <ul>
               <li class="nav-items">
