--- a/Sites/guessingNumber/guessingNumber.html
+++ b/Sites/guessingNumber/guessingNumber.html
@@ -10,7 +10,7 @@
 	</head>
 	<body class="everything">
 		<div class="container whole">
-			<a href="../index.html">Go back main page</a>
+			<a href="../../index.html">Go back main page</a>
 			<header class="container">
 				<h1>Number Guessing Game</h1>
 			</header>
