--- a/index.html
+++ b/index.html
@@ -14,25 +14,31 @@
 		<h1 class="mainTitle">These are my apps and websites</h1>
 		<ul class="center">
 			<li class="center">
-				<a href="./RecipeSite/recipes.html">Recipes Sites</a>
+				<a href="./sites/RecipeSite/recipes.html">Recipes Sites</a>
 			</li>
 			<li class="center">
-				<a href="./1stHTMLWebsite/firsthtmlwebsite.html">1st HTML website</a>
+				<a href="./sites/1stHTMLWebsite/firsthtmlwebsite.html"
+					>1st HTML website</a
+				>
 			</li>
 			<li class="center">
-				<a href="./guessingNumber/guessingNumber.html">Guessing Number Sites</a>
+				<a href="./sites/guessingNumber/guessingNumber.html"
+					>Guessing Number Sites</a
+				>
 			</li>
 			<li>
-				<a href="./Minimalist Website/minimalist.html">Minimalist Website</a>
+				<a href="./sites/Minimalist Website/minimalist.html"
+					>Minimalist Website</a
+				>
 			</li>
 			<li>
-				<a href="./SubmitForm/">Submit Form</a>
+				<a href="./sites/SubmitForm/">Submit Form</a>
 			</li>
 			<li>
-				<a href="./Clock/clock.html">Simple Clock</a>
+				<a href="./sites/Clock/clock.html">Simple Clock</a>
 			</li>
 			<li>
-				<a href="./Bigger/bigger.html">Bigger Than Program</a>
+				<a href="./sites/Bigger/bigger.html">Bigger Than Program</a>
 			</li>
 		</ul>
 
