--- a/Sites/1stHTMLWebsite/firsthtmlwebsite.html
+++ b/Sites/1stHTMLWebsite/firsthtmlwebsite.html
@@ -17,7 +17,7 @@
             font-family: courier,sans serrif}
       p{ color: orange}
       </style>
-      <a href="../index.html">Go back main page</a>
+      <a href="../../index.html">Go back main page</a>
       <h1 style="border:5px solid DodgerBlue;text-align:center">My First Heading</h1>
       <h2 style="color:blue;font-size:300%">Less Important Heading</h2>
       <p style="background-color:#ccecc8;font-family:courier;font-size:160%;text-align:center">My first paragraph</p>
