--- a/Sites/Clock/clock.html
+++ b/Sites/Clock/clock.html
@@ -5,13 +5,13 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>1stApp</title>
-		<link rel="stylesheet" href="styles.css" />
+		<link rel="stylesheet" href="../styles.css" />
 		<script src="app.js"></script>
 	</head>
 	<body onload="ShowTime()">
 		<header>
 			<h1>Simple Clock</h1>
-			<a href="../index.html">Go back to main page</a>
+			<a href="../../index.html">Go back to main page</a>
 		</header>
 		<main>
 			<button onclick="ShowTime()">click to show time</button>
