--- a/Sites/RecipeSite/recipes.html
+++ b/Sites/RecipeSite/recipes.html
@@ -5,10 +5,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Recipes</title>
-		<link rel="stylesheet" href="../styles.css" />
+		<link rel="stylesheet" href="../../styles.css" />
 	</head>
 	<body>
-		<a href="../index.html">Go back main page</a>
+		<a href="../../index.html">Go back main page</a>
 		<h1>Recipes</h1>
 		<ul>
 			<li><a href="./recipes/friedChicken.html">Fried Chicken Recipe</a></li>
