--- a/Sites/SubmitForm/index.html
+++ b/Sites/SubmitForm/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3rdPgm</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <script src="app.js" defer></script>
 </head>
 <body>
-    <header>
-        <h1>Submit Form</h1>
+    <header class="mainTitle">
+        <h1 >Submit Form</h1>
+        <a href="../../index.html">Go back to main page</a>
     </header>
     <main>
-        <a href="../index.html">Go back to main page</a>
         <form class="container" id="form">
             <input id="name" class="textInput" type="text" placeholder="Enter your name">
             <input id="age" class="textInput" type="number" placeholder="Enter your age" >
