--- a/Sites/RecipeSite/recipes/steak.html
+++ b/Sites/RecipeSite/recipes/steak.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="../../styles.css" />
+		<link rel="stylesheet" href="../../../styles.css" />
 		<title>Document</title>
 	</head>
 	<body>
@@ -18,14 +18,14 @@
 			steak, then toss it on the grill for the best flavor!
 		</p>
 		<h2>Ingredients</h2>
-		<ul>
-			<li>Balsamic Vinegar</li>
-			<li>Low-sodium soy sauce</li>
-			<li>Olive oil</li>
-			<li>Worcestershire sauce</li>
-			<li>Honey</li>
-			<li>Dried Italian seasoning</li>
-			<li>Dried mustard</li>
+		<ul class>
+			<li class="ingredientList">Balsamic Vinegar</li>
+			<li class="ingredientList">Low-sodium soy sauce</li>
+			<li class="ingredientList">Olive oil</li>
+			<li class="ingredientList">Worcestershire sauce</li>
+			<li class="ingredientList">Honey</li>
+			<li class="ingredientList">Dried Italian seasoning</li>
+			<li class="ingredientList">Dried mustard</li>
 		</ul>
 		<h2>Steps</h2>
 		<ol>
