--- a/Sites/RecipeSite/recipes/lasagna.html
+++ b/Sites/RecipeSite/recipes/lasagna.html
@@ -4,59 +4,63 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="../../styles.css" />
+		<link rel="stylesheet" href="../../../styles.css" />
 		<title>Document</title>
 	</head>
 	<body>
 		<h1>Lasagna Recipe</h1>
 		<img src="../images/lasagna.jpg" alt="Lasagna Image" />
 		<h2>Description</h2>
-		<p>This is the best lasagna recipe passed on in the family</p>
-		<h2>Ingredients</h2>
+		<p class="RecipeItem">
+			This is the best lasagna recipe passed on in the family
+		</p>
+		<h2 class="RecipeItem">Ingredients</h2>
 		<ul>
-			<li>1 medium onion, chopped</li>
-			<li>2 tablespoons olive oil</li>
-			<li>4 garlic cloves, minced</li>
-			<li>1 can (6 ounces) tomato paste</li>
-			<li>2 cans (28 ounces each ) crushed tomatoes in puree</li>
-			<li>6 cups water</li>
-			<li>1 cup chopped fresh basil</li>
-			<li>2-1/4 teaspoons sugar, divided</li>
-			<li>1 teaspoon salt</li>
-			<li>1 pound bulk Italian sausage</li>
-			<li>4 Italian sausage links</li>
-			<li>1 carton (16 ounces) whole milk ricotta cheese</li>
-			<li>8 cups shredded mozzarella cheese, divided</li>
-			<li>1 large egg, beaten</li>
-			<li>1/4 teaspoon dried basil</li>
-			<li>12 sheets no-cook lasagna noodles</li>
-			<li>21 slices provolone cheese</li>
-			<li>1/3 cup grated Parmesan cheese</li>
+			<li class="RecipeItem">1 medium onion, chopped</li>
+			<li class="RecipeItem">2 tablespoons olive oil</li>
+			<li class="RecipeItem">4 garlic cloves, minced</li>
+			<li class="RecipeItem">1 can (6 ounces) tomato paste</li>
+			<li class="RecipeItem">
+				2 cans (28 ounces each ) crushed tomatoes in puree
+			</li>
+			<li class="RecipeItem">6 cups water</li>
+			<li class="RecipeItem">1 cup chopped fresh basil</li>
+			<li class="RecipeItem">2-1/4 teaspoons sugar, divided</li>
+			<li class="RecipeItem">1 teaspoon salt</li>
+			<li class="RecipeItem">1 pound bulk Italian sausage</li>
+			<li class="RecipeItem">4 Italian sausage links</li>
+			<li class="RecipeItem">1 carton (16 ounces) whole milk ricotta cheese</li>
+			<li class="RecipeItem">8 cups shredded mozzarella cheese, divided</li>
+			<li class="RecipeItem">1 large egg, beaten</li>
+			<li class="RecipeItem">1/4 teaspoon dried basil</li>
+			<li class="RecipeItem">12 sheets no-cook lasagna noodles</li>
+			<li class="RecipeItem">21 slices provolone cheese</li>
+			<li class="RecipeItem">1/3 cup grated Parmesan cheese</li>
 		</ul>
-		<h2>Steps</h2>
+		<h2 class="RecipeItem">Steps</h2>
 		<ol>
-			<li>
+			<li class="step">
 				In a Dutch oven, cook onion in olive oil over medium heat until tender,
 				4-5 minutes. Add garlic; cook 1 minute. Stir in tomato paste and cook,
 				stirring constantly, until fragrant, 3-4 minutes. Add crushed tomatoes,
 				water, fresh basil, 2 teaspoons sugar and salt. Bring to a boil; reduce
 				heat. Simmer 1 hour, stirring occasionally.
 			</li>
-			<li>
+			<li class="step">
 				Meanwhile, cook bulk sausage in a skillet over medium heat until no
 				longer pink, breaking into crumbles, 8-10 minutes; drain. Add to sauce;
 				simmer until mixture is thickened, about 1 hour longer.
 			</li>
-			<li>
+			<li class="step">
 				While sauce simmers, preheat oven to 350°. Place sausage links on a
 				rimmed baking sheet; roast until cooked through, 35-40 minutes. Remove
 				and let cool slightly; slice into 1/4-in.-thick pieces.
 			</li>
-			<li>
+			<li class="step">
 				In a small bowl, mix ricotta cheese, 1 cup mozzarella cheese, egg, dried
 				basil and remaining 1/4 teaspoon sugar.
 			</li>
-			<li>
+			<li class="step">
 				In a greased 13x9-in. baking dish, spread 2 cups sauce. Arrange 4
 				noodles over sauce; spread with a third of the ricotta mixture. Add 7
 				provolone slices, a third of the sliced sausage and 1-1/2 cups
@@ -65,7 +69,7 @@
 				on the side), remaining 2-1/2 cups mozzarella cheese and the Parmesan
 				cheese (dish will be full).
 			</li>
-			<li>
+			<li class="step">
 				Place dish on a rimmed baking sheet and bake, uncovered, until bubbly
 				and deep golden brown, 60-65 minutes. Let stand 15 minutes before
 				serving. Serve with remaining meat sauce.
