Web pages bad link bug corrected

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<h1 class="mainTitle">These are my apps and websites</h1>
 		<ul class="center">
 			<li class="center">
-				<a href="./sites/RecipeSite/recipeSite/recipes.html">Recipes Sites</a>
+				<a href="./Sites/RecipeSite/recipes.html">Recipes Sites</a>
 			</li>
 			<li class="center">
 				<a href="./sites/1stHTMLWebsite/firsthtmlwebsite.html"
@@ -27,12 +27,12 @@
 				>
 			</li>
 			<li>
-				<a href="./sites/Minimalist Website/minimalist.html"
+				<a href="./Sites/Minimalist Website/minimalist.html"
 					>Minimalist Website</a
 				>
 			</li>
 			<li>
-				<a href="./sites/SubmitForm/SubmitForm/">Submit Form</a>
+				<a href="./Sites/SubmitForm/index.html">Submit Form</a>
 			</li>
 			<li>
 				<a href="./sites/Clock/clock.html">Simple Clock</a>
