Translated English to French

--- a/Sites/Bigger/bigger.html
+++ b/Sites/Bigger/bigger.html
@@ -10,21 +10,22 @@
 	</head>
 	<body>
 		<header>
-			<h1>Bigger than Program</h1>
+			<h1>Jeu Plus Grand Nombre</h1>
 		</header>
 		<main>
-			<a href="../../index.html">Go back to main page</a>
+			<a href="../../index.html">Retour à la page principale</a>
 			<div class="container">
 				<h2>
-					program where user inputs 2 int values in 2 input boxes and you
-					display the greatest of them on the alert box, when a button is
-					clicked.
+					2 utilisateur entre un nombre et le programme retourne le plus grand
+					nombre
 				</h2>
 			</div>
-			<input type="text" id="nb1" placeholder="Enter a whole number" />
-			<input type="text" id="nb2" placeholder="Enter a whole number" />
+			<input type="text" id="nb1" placeholder="Entrer un nombre entier" />
+			<input type="text" id="nb2" placeholder="Entrer un nombre entier" />
 			<div>
-				<button onclick="ShowBiggest()">Click to see biggest number</button>
+				<button onclick="ShowBiggest()">
+					Cliquer pour voir le plus grand nombre
+				</button>
 			</div>
 		</main>
 	</body>
