--- a/Sites/SubmitForm/index.html
+++ b/Sites/SubmitForm/index.html
@@ -10,30 +10,30 @@
 </head>
 <body>
     <header class="mainTitle">
-        <h1 >Submit Form</h1>
-        <a href="../../index.html">Go back to main page</a>
+        <h1 >formulaire</h1>
+        <a href="../../index.html">Retour à la page principale</a>
     </header>
     <main>
         <form class="container" id="form">
-            <input id="name" class="textInput" type="text" placeholder="Enter your name">
-            <input id="age" class="textInput" type="number" placeholder="Enter your age" >
-            <input id="education" class="textInput" type="text" placeholder="Enter your highest level of education" required>
-            <input id="address" class="textInput" type="text" placeholder="Enter your address">
-            <input id="salary" class="textInput" type="number" placeholder="Enter your expected salary">
-            <input class="btnSubmit" type="submit" value="Submit">
-            <input type="reset">
+            <input id="name" class="textInput" type="text" placeholder="Entrer votre nom">
+            <input id="age" class="textInput" type="number" placeholder="Entrer votre age" >
+            <input id="education" class="textInput" type="text" placeholder="Entrer votre plus haut niveau de scolarité" required>
+            <input id="address" class="textInput" type="text" placeholder="Entrer votre adresse">
+            <input id="salary" class="textInput" type="number" placeholder="Entrer votre salaire">
+            <input class="btnSubmit" type="submit" value="Envoyer">
+            <input type="reset" value="Réinitialiser">
         </form>
         <div id="UserInfos">
-            <h1>User Informations</h1>
-            <h2>Name</h2>
-            <p id="nameInfo">This is the name</p>
-            <h2>Age</h2>
+            <h1>Informations Utilisateurs</h1>
+            <h2>Nom</h2>
+            <p id="nameInfo">Voici le nom</p>
+            <h2>Âge</h2>
             <p id="ageInfo">This is the age</p>
-            <h2>Education</h2>
+            <h2>Éducation</h2>
             <p id="educationInfo">This is the education</p>
-            <h2>Adress</h2>
+            <h2>Adresse</h2>
             <p id="addressInfo">This is the adress</p>
-            <h2>Expected Salary</h2>
+            <h2>Salaire</h2>
             <p id="salaryInfo">This is the expected salary</p>
         </div>
     </main>
