--- a/index.html
+++ b/index.html
@@ -4,44 +4,42 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta lang="fr" />
 		<link rel="stylesheet" href="./styles.css" />
 		<title>Gonzzy Main Page</title>
 	</head>
 	<body>
-		<div class="logo">
-			<img src="./images/OGLogo.jpg" alt="Logo" class="center" />
-		</div>
-		<h1 class="mainTitle">These are my apps and websites</h1>
+		<img src="./images/OGLogo.png" alt="Logo" class="logo" />
+
+		<h1 class="mainTitle">Voici mes sites web et applications</h1>
 		<ul class="center">
 			<li class="center">
-				<a href="./Sites/RecipeSite/recipes.html">Recipes Sites</a>
+				<a href="./Sites/RecipeSite/recipes.html">Site de Recette</a>
 			</li>
 			<li class="center">
-				<a href="./sites/1stHTMLWebsite/firsthtmlwebsite.html"
-					>1st HTML website</a
-				>
+				<a href="./sites/1stHTMLWebsite/firsthtmlwebsite.html">1er site HTML</a>
 			</li>
 			<li class="center">
 				<a href="./sites/guessingNumber/guessingNumber.html"
-					>Guessing Number Sites</a
+					>Jeu Trouver Nombre Mystère</a
 				>
 			</li>
 			<li>
 				<a href="./Sites/Minimalist Website/minimalist.html"
-					>Minimalist Website</a
+					>Site Minimaliste</a
 				>
 			</li>
 			<li>
-				<a href="./Sites/SubmitForm/index.html">Submit Form</a>
+				<a href="./Sites/SubmitForm/index.html">Formulaire</a>
 			</li>
 			<li>
-				<a href="./sites/Clock/clock.html">Simple Clock</a>
+				<a href="./sites/Clock/clock.html">Horloge Simple</a>
 			</li>
 			<li>
-				<a href="./sites/Bigger/bigger.html">Bigger Than Program</a>
+				<a href="./sites/Bigger/bigger.html">Jeu Plus Grand Nombre</a>
 			</li>
 		</ul>
 
-		<h6>Made by: Olivier Gonçalves</h6>
+		<h6>Fait par: Olivier Gonçalves</h6>
 	</body>
 </html>
