--- a/Sites/Clock/clock.html
+++ b/Sites/Clock/clock.html
@@ -3,18 +3,19 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta lang="fr" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>1stApp</title>
+		<title>Horloge Simple</title>
 		<link rel="stylesheet" href="../../styles.css" />
 		<script src="app.js"></script>
 	</head>
 	<body onload="ShowTime()">
 		<header>
-			<h1>Simple Clock</h1>
-			<a href="../../index.html">Go back to main page</a>
+			<h1>Horloge Simple</h1>
+			<a href="../../index.html">Retour Page Principale</a>
 		</header>
 		<main>
-			<button onclick="ShowTime()">click to show time</button>
+			<button onclick="ShowTime()">cliquer pour voir l'heure</button>
 		</main>
 		<p id="time"></p>
 	</body>
