--- a/Sites/RecipeSite/recipes.html
+++ b/Sites/RecipeSite/recipes.html
@@ -8,13 +8,13 @@
 		<link rel="stylesheet" href="../../styles.css" />
 	</head>
 	<body>
-		<a href="../../index.html">Go back main page</a>
-		<h1>Recipes</h1>
+		<a href="../../index.html">Retour à la page principale</a>
+		<h1>Recettes</h1>
 		<ul>
-			<li><a href="./recipes/friedChicken.html">Fried Chicken Recipe</a></li>
+			<li><a href="./recipes/friedChicken.html">Poulet Frit</a></li>
 			<li><a href="./recipes/steak.html">Steak</a></li>
-			<li><a href="./recipes/lasagna.html">Lasagna</a></li>
-			<li><a href="./recipes/fries.html">Fries</a></li>
+			<li><a href="./recipes/lasagna.html">Lasagne</a></li>
+			<li><a href="./recipes/fries.html">Frites Maison</a></li>
 		</ul>
 	</body>
 </html>
