--- a/Sites/guessingNumber/guessingNumber.html
+++ b/Sites/guessingNumber/guessingNumber.html
@@ -10,33 +10,32 @@
 	</head>
 	<body class="everything">
 		<div class="container whole">
-			<a href="../../index.html">Go back main page</a>
+			<a href="../../index.html">Retour page principale</a>
 			<header class="container">
-				<h1>Number Guessing Game</h1>
+				<h1>Trouver Nombre Mystère</h1>
 			</header>
 			<main class="container" id="main">
 				<div>
 					<p>
-						We have selected a random number between 1 and 100. See if you can
-						guess it in 10 turns or fewer. We'll tell you if your guess was too
-						high or too low.
+						Il y a un nombre mystère entre 1 et 100, vous avez 10 essais pour le
+						trouver.
 					</p>
 				</div>
 				<div>
 					<p id="answer"></p>
-					<label for="Question">Enter a number: </label>
+					<label for="Question">Entrer un nombre: </label>
 					<input class="inputs" id="inp" type="number" />
-					<button id="btnSubmit" onclick="Game()">Submit answer</button>
+					<button id="btnSubmit" onclick="Game()">Envoyer réponse</button>
 					<p id="tries">0/10</p>
 				</div>
 				<div>
-					<h3 id="previous">Previous Guesses:</h3>
+					<h3 id="previous">Essais précédents:</h3>
 				</div>
 				<div id="results">
 					<h3 id="result"></h3>
 					<p id="clue"></p>
 				</div>
-				<button id="RestartBtn" onclick="Reset()">Restart Game</button>
+				<button id="RestartBtn" onclick="Reset()">Recommencer partie</button>
 			</main>
 		</div>
 	</body>
