Directory to sites bug fixed

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 				<a href="./Sites/RecipeSite/recipes.html">Site de Recette</a>
 			</li>
 			<li class="center">
-				<a href="./sites/1stHTMLWebsite/firsthtmlwebsite.html">1er site HTML</a>
+				<a href="./Sites/1stHTMLWebsite/firsthtmlwebsite.html">1er site HTML</a>
 			</li>
 			<li class="center">
-				<a href="./sites/guessingNumber/guessingNumber.html"
+				<a href="./Sites/guessingNumber/guessingNumber.html"
 					>Jeu Trouver Nombre Mystère</a
 				>
 			</li>
@@ -33,10 +33,10 @@
 				<a href="./Sites/SubmitForm/index.html">Formulaire</a>
 			</li>
 			<li>
-				<a href="./sites/Clock/clock.html">Horloge Simple</a>
+				<a href="./Sites/Clock/clock.html">Horloge Simple</a>
 			</li>
 			<li>
-				<a href="./sites/Bigger/bigger.html">Jeu Plus Grand Nombre</a>
+				<a href="./Sites/Bigger/bigger.html">Jeu Plus Grand Nombre</a>
 			</li>
 		</ul>
 
