Menu & Logo Corrected

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 		<title>Gonzzy Main Page</title>
 	</head>
 	<body>
-		<img src="./images/OGLogo.png" alt="Logo" class="logo" />
+		<div class="Titre-Principale">
+			<img src="./images/LogoOG.png" id="logo-img" alt="Logo" class="logo" />
 
-		<h1 class="mainTitle">Voici mes sites web et applications</h1>
+			<h1 class="mainTitle">Voici mes sites web et applications</h1>
+			<div class="empty">nothing</div>
+		</div>
 		<ul class="center">
 			<li class="center">
 				<a href="./Sites/RecipeSite/recipes.html">Site de Recette</a>
