--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 	</head>
 	<body>
 		<div class="Titre-Principale">
-			<img src="./images/LogoOG.png" id="logo-img" alt="Logo" class="logo" />
+			<div class="logo-container">
+				<img src="./images/LogoOG.png" id="logo-img" alt="Logo" class="logo" />
+			</div>
 
 			<h1 class="mainTitle">Voici mes sites web et applications</h1>
 			<div class="empty">nothing</div>
