Website Design Remake

--- a/index.html
+++ b/index.html
@@ -9,42 +9,83 @@
 		<title>Gonzzy Main Page</title>
 	</head>
 	<body>
-		<div class="Titre-Principale">
-			<div class="logo-container">
-				<img src="./images/LogoOG.png" id="logo-img" alt="Logo" class="logo" />
+		<img src="./images/LogoOG.png" id="logo-img" alt="Logo" />
+
+		<div class="Contenu">
+			<div class="A-Propos">
+				<h2>À propos</h2>
+				<ul>
+					<li>Développeur Web Canadiens</li>
+					<li>Développement Web 3.0</li>
+					<li>Entrepreneur</li>
+					<li>Crypto</li>
+				</ul>
 			</div>
+			<div class="Liste-Sites">
+				<h2>Applications & Sites</h2>
+				<ul class="center">
+					<li class="center">
+						<a href="./Sites/RecipeSite/recipes.html">Site de Recette</a>
+					</li>
+					<li class="center">
+						<a href="./Sites/1stHTMLWebsite/firsthtmlwebsite.html"
+							>1er site HTML</a
+						>
+					</li>
+					<li class="center">
+						<a href="./Sites/guessingNumber/guessingNumber.html"
+							>Jeu Trouver Nombre Mystère</a
+						>
+					</li>
+					<li>
+						<a href="./Sites/Minimalist Website/minimalist.html"
+							>Site Minimaliste</a
+						>
+					</li>
+					<li>
+						<a href="./Sites/SubmitForm/index.html">Formulaire</a>
+					</li>
+					<li>
+						<a href="./Sites/Clock/clock.html">Horloge Simple</a>
+					</li>
+					<li>
+						<a href="./Sites/Bigger/bigger.html">Jeu Plus Grand Nombre</a>
+					</li>
+				</ul>
+			</div>
+			<div class="Connaissances">
+				<h2>En apprentissage</h2>
+				<ul>
+					<li>
+						<h3>HTML</h3>
+						<img src="./images/gaugeMoyenBas.png" alt="" class="Gauge" />
+					</li>
+					<li>
+						<h3>CSS</h3>
+						<img src="./images/gaugeMoyenBas.png" alt="" class="Gauge" />
+					</li>
+					<li>
+						<h3>Javascript</h3>
+						<img src="./images/gaugeBas.png" alt="" class="Gauge" />
+					</li>
+				</ul>
+				<h2>Autres</h2>
+				<ul>
+					<li>
+						<h3>C#</h3>
+						<img src="./images/gaugeMilieu.png" alt="gauge" class="Gauge" />
+					</li>
+					<li>
+						<h3>Python</h3>
+						<img src="./images/gaugeBas.png" alt="gauge" class="Gauge" />
+					</li>
 
-			<h1 class="mainTitle">Voici mes sites web et applications</h1>
-			<div class="empty">nothing</div>
+					<li>
+						<h3>C++</h3>
+						<img src="./images/gaugeMoyenBas.png" alt="gauge" class="Gauge" />
+					</li>
+				</ul>
+			</div>
 		</div>
-		<ul class="center">
-			<li class="center">
-				<a href="./Sites/RecipeSite/recipes.html">Site de Recette</a>
-			</li>
-			<li class="center">
-				<a href="./Sites/1stHTMLWebsite/firsthtmlwebsite.html">1er site HTML</a>
-			</li>
-			<li class="center">
-				<a href="./Sites/guessingNumber/guessingNumber.html"
-					>Jeu Trouver Nombre Mystère</a
-				>
-			</li>
-			<li>
-				<a href="./Sites/Minimalist Website/minimalist.html"
-					>Site Minimaliste</a
-				>
-			</li>
-			<li>
-				<a href="./Sites/SubmitForm/index.html">Formulaire</a>
-			</li>
-			<li>
-				<a href="./Sites/Clock/clock.html">Horloge Simple</a>
-			</li>
-			<li>
-				<a href="./Sites/Bigger/bigger.html">Jeu Plus Grand Nombre</a>
-			</li>
-		</ul>
-
-		<h6>Fait par: Olivier Gonçalves</h6>
 	</body>
 </html>
