--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
 					<li>
 						<a href="./Sites/Bigger/bigger.html">Jeu Plus Grand Nombre</a>
 					</li>
+					<li>
+						<a href="./Sites/ClickSpeedGame.html">Jeu de Visée et Rapidité</a>
+					</li>
 				</ul>
 			</div>
 			<div class="Connaissances">
