Corrected directory error

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<a href="./Sites/Bigger/bigger.html">Jeu Plus Grand Nombre</a>
 					</li>
 					<li>
-						<a href="./Sites/ClickSpeedGame.html">Jeu de Visée et Rapidité</a>
+						<a href="./Sites/ClickSpeedGame/clickSpeedGame.html">Jeu de Visée et Rapidité</a>
 					</li>
 				</ul>
 			</div>
