Adjusted width of video demo of Game

--- a/Sites/ClickSpeedGame/clickSpeedGame.html
+++ b/Sites/ClickSpeedGame/clickSpeedGame.html
@@ -11,8 +11,8 @@
     <h2>Jeu C# Tir</h2>
     <br>
     <p>Librairie SFML 2.5.1 et C# utilisé <br>Cibles générés aléatoirement<br>Tirer sur les cibles avant que le temps s'écoule complètement<br> </p>
-    <video controls loop>
-        <source src="./video/demoJeu.mp4" type="video/mp4">
+    <video controls loop style="width: 60%;">
+        <source src="./video/demoJeu.mp4" type="video/mp4" style="width: 200px;">
       </video>
 </body>
 </html>
